# GenomeKit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COPYRIGHT.txt  Dockerfile  README.md  _pyproject.toml  genomekit_dev.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: release-please.yml
.github/workflows/: build-wheels.yaml  dockerize.yaml  publish-docs.yaml  pyproject.toml  release-please.yml  run-tests.yaml  wheel.yaml
.vcproj/: genome_kit.pyproj  genome_kit.sln  genome_kit_cxx.vcxproj  genome_kit_cxx.vcxproj.filters
conda-recipe/: conda_build_config.yaml  meta.yaml
data-src/: build.py  functions.sh  promote_ucsc_canonical.py
demos/: build_track.py  extract_acceptor_dna.py  extract_conservation.py  extract_exonic_dna.py  find_downstream_acceptors.py  query_vcf.py  simple_variant_genome.py  variant_sequences_from_vcf.py  walk_annotations.py
docs/: anchors.html  api.html  data_org.html  develop.html  develop.rst  df.html  genindex.html  genomes.html  genomes.rst  index.html  index.rst  objects.inv  py-modindex.html  quickstart.html  quickstart.rst  search.html  searchindex.js
docs-src/: Makefile  api.rst  conf.py  data_org.rst  develop.rst  df.rst  diseq.rst  genomes.rst  index.rst  make.bat  quickstart.rst
docs/5.0.1/: anchors.html  api.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/5.0.2/: anchors.html  api.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html
docs/5.1.0/: anchors.html  api.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/5.1.1/: anchors.html  api.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/5.2.0/: anchors.html  api.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html
docs/5.2.1/: anchors.html  api.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html
docs/5.2.2/: anchors.html  api.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/5.2.3/: anchors.html  api.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html
docs/5.2.4/: anchors.html  api.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/6.0.0/: anchors.html  api.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/6.0.3/: anchors.html  api.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html
docs/6.1.0/: anchors.html  api.html  data_org.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/6.1.1/: anchors.html  api.html  data_org.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/6.3.0/: anchors.html  api.html  data_org.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html
docs/6.4.0/: anchors.html  api.html  data_org.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/6.5.0/: anchors.html  api.html  data_org.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html
docs/6.5.1/: api.html  develop.html  py-modindex.html  quickstart.html
docs/6.5.2/: api.html  develop.html  genomes.html  objects.inv  py-modindex.html  search.html
docs/7.0.0/: anchors.html  api.html  data_org.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html
docs/7.1.0/: anchors.html  api.html  data_org.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/7.2.0/: anchors.html  api.html  data_org.html  develop.html  genindex.html  genomes.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/7.4.2/: anchors.html  (+11 more)
genome_kit/: __init__.py  __main__.py  _apply_variants.py  _build_annotations.py  _build_appris.py  _build_mane.py  _cxx_util.py  _gk_data_config.py  _optional.py  _twobitutils.py  _util.py  data_manager.py  diseq.py  genome.py  genome_annotation.py  genome_dna.py  genome_track.py  gk_data.py  interval.py  jralign.py  jrdist.py  marshal.py  ralign.py  serialize.py  variant.py  variant_genome.py  vcf_table.py
setup/: __init__.py  c_ext.py
src/: .clang-format  array_view.h  biostr.h  chrom.cpp  chrom.h  defines.h  file.cpp  file.h  format.h  genome.cpp  genome.h  genome_anno.cpp  genome_anno.h  genome_anno_io.cpp  genome_dna.cpp  genome_dna.h  genome_kit.cpp  genome_kit.h  genome_track.cpp  genome_track.h  genome_track_io.cpp  gk_assert.cpp  gk_assert.h  gk_time.cpp  gk_time.h  half.cpp  half.h  interval.cpp  interval.h  jralign.cpp  jralign.h  jrdist.cpp  jrdist.h  main.cpp  py_genome.cpp  py_genome.h  py_genome_anno.cpp  py_genome_anno.h  py_genome_dna.cpp  py_genome_dna.h  (+29 more)
starter/: build.sh
tests/: __init__.py  _gk_data_get_file_during_import.py  test_apply_variants.py  test_data_manager.py  test_diseq.py  test_genome.py  test_genome_annotation.py  test_genome_dna.py  test_genome_track.py  test_gk_data.py  test_gkdf.py  test_interval.py  test_read_alignments.py  test_serialize.py  test_twobitutils.py  test_variant.py  test_variant_genome.py  test_variant_table.py
(+701 files in other folders)
