# Specify build system requirements for pip wheel builds.
# This way is incompatible with conda, which is why the file can't have this file at the project root dir.
# The file is moved to the project root in Github Actions before starting the pip wheel build.
[build-system]
requires = ["setuptools>=42", "wheel", "numpy==2"]
